# pulse-rewards

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-review.yml
contracts/: Cargo.toml  README.md
contracts/pulse_rewards/: Cargo.toml
contracts/pulse_rewards/src/: lib.rs
contracts/pulse_token/: Cargo.toml
contracts/pulse_token/src/: lib.rs
docs/: architecture.md  code-style.md  contracts.md
docs/adr/: 001-use-stellar-soroban.md  002-jwt-rs256.md  003-postgres-primary-store.md  README.md
docs/api/: README.md  openapi.json
docs/ops/: runbook.md
docs/security/: README.md
docs/stellar/: freighter-guide.md  integration.md
infra/: main.tf  variables.tf
infra/modules/elasticache/: main.tf
infra/modules/rds/: main.tf
infra/modules/vpc/: main.tf
k8s/: backend-deployment.yaml  manifests.yaml
k8s/helm/: Chart.yaml  values.yaml
monitoring/: README.md
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: pulse-alerts.yml
nginx/: nginx.conf
pulseRewards/: .env.example  package-lock.json  package.json
pulseRewards/backend/: Dockerfile  tsconfig.json
pulseRewards/frontend/: Dockerfile  next.config.js  tailwind.config.js
scripts/: build-contracts.sh  setup-soroban-dev.sh  test-contracts.sh
(+31 files in other folders)
