[workspace]
resolver = "2"
members = [
    "pulse_token",
    "pulse_rewards",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
codegen-units = 1
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
